# dibbs-ecr-diff

./: .gitignore  README.md  compose.yml  justfile  pyproject.toml
.github/: CODEOWNERS  pull_request_template.md
.github/ISSUE_TEMPLATE/: task.md  user_story.md
.github/PULL_REQUEST_TEMPLATE/: pull_request_template.md
.github/workflows/: tests.yml
.justscripts/: server.just  structurizr.just
docker/: lambda.Dockerfile  server.Dockerfile
docs/: compose.structurizr.yml  workspace.dsl  workspace.json
prototype/: CDA_RR.xml  CDA_eICR_after.xml  after_with_change_markers.xml  changes.json  diff_prototype.py
